--- a/appspec.yml
+++ b/appspec.yml
@@ -2,9 +2,18 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/express-app
+    destination: /var/www/html/and_backend_2024
 hooks:
-  ApplicationStart:
-    - location: scripts/start_server.sh
+  AfterInstall:
+    - location: scripts/after_install
       timeout: 300
-      runas: ec2-user
+      runas: ubuntu
+  ApplicationStart:
+    - location: scripts/application_start
+      timeout: 300
+      runas: ubuntu
+  ApplicationStop:
+    - location: scripts/application_stop
+      timeout: 300
+      runas: ubuntu
+ 
